# docs-stratego

./: .gitignore  .gitmodules  AGENTS.md  GEMINI.md  README.md  pyproject.toml  start.sh
.factory/: agent-session.json  project.json  tech-profile.json
.factory/memory/: agent-session.md  api.summary.md  architecture.summary.md  change-summary.md  current-state.md  design-assets.summary.md  pr-board.summary.md  pr-check.summary.md  pr-handover.summary.md  pr.summary.md  prd.summary.md  project-index.md  remote-pr.summary.md  requirements-verification.summary.md  state-doctor.summary.md  tasks.summary.md  tech-stack.summary.md  tests.summary.md  ui.summary.md
.factory/process/: auto-sync.md  chat-bootstrap.md  command-profiles.md  daily-status.md  execution-log.md  multi-agent-board.md  pr-board.md  pr-check-report.md  pr-handovers.md  pull-requests.md  quality-check-report.md  remote-prs.md  risk-register.md  role-assignments.md  role-closeouts.md  role-handoffs.md  role-reviews.md  role-sync.md  stage-check-report.md  state-doctor-report.md  team-closeouts.md  team-retro.md  team-sync.md  workflow-runs.md
.generated-startup-check/: mkdocs.generated.yml
.generated-startup-check/authz/: permissions.json
.generated-startup-check/nginx/: private_locations.conf
.generated-startup-check/site_docs/: index.md
.generated-verify/: mkdocs.generated.yml
.generated-verify/authz/: permissions.json
.generated-verify/nginx/: private_locations.conf
.generated-verify/site_docs/: crawler4j  ctrip_crawler  index.md  ride-loop  shanforge  stratix
.github/workflows/: deploy-docs.yml  publish-cli.yml  sync-source-pointers.yml  validate-source-pointer-pr.yml
config/: source-repos.crawler4j.pending.json  source-repos.example.json  source-repos.json
deploy/: docker-compose.yml
deploy/casdoor/: app.conf.example
deploy/oauth2-proxy/: oauth2-proxy.cfg  oauth2-proxy.cfg.example
docs/: index.md
docs/01-getting-started/: document-map.md  index.md  project-overview.md  quick-start.md
docs/02-user-guide/: admin-guide.md  cloud-server-cicd-playbook.md  configuration.md  index.md  installation.md  local-development.md  operator-guide.md  reader-guide.md  subrepo-integration.md  usage.md  user-guide.md
docs/04-project-development/: index.md
scripts/: README.md  build_site.py  deploy_remote.sh  render_host_nginx_conf.sh  sync_source_pointers.py  sync_sources.py
src/: cli.py  dev_server.py  models.py  site_builder.py  source_admin.py  source_config.py  source_pointer_sync.py  source_sync.py
src/docs_stratego/: __init__.py  __main__.py  cli.py  site_builder.py  source_admin.py  source_sync.py
tests/: test_cli.py  test_deploy_stack.py  test_site_builder.py  test_source_admin.py  test_source_sync.py  test_sync_source_pointers.py
(+441 files in other folders)
