[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "docs-stratego"
version = "0.1.0"
description = "Central documentation hub for multi-repo software projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mkdocs>=1.6,<2.0",
  "mkdocs-material>=9.6,<10.0",
  "pyyaml>=6.0,<7.0"
]

[project.scripts]
docs-stratego = "docs_stratego.cli:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
