[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "docs-stratego"
version = "0.1.1"
description = "Central documentation hub for multi-repo software projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "mkdocs>=1.6,<2.0",
  "mkdocs-material>=9.6,<10.0",
  "pyyaml>=6.0,<7.0"
]

[project.urls]
Repository = "https://github.com/uroborus2s/docs-stratego"
Documentation = "https://github.com/uroborus2s/docs-stratego/tree/main/docs"

[project.scripts]
docs-stratego = "cli:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = []

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
  "cli",
  "models",
  "site_builder",
  "source_admin",
  "source_config",
  "source_pointer_sync",
  "source_sync",
]
